display fake data fetched from graphql

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,9 @@
-Coming soon
+<h1>Coming soon</h1>
+
+<p>
+  List of fake user accounts fetched from GraphQL backend:
+</p>
+
+<ul>
+  <li *ngFor="let user of users">{{user.email}}</li>
+</ul>
