--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,64 @@
-<h1>Coming soon</h1>
+<mat-sidenav-container>
 
-<p>
-  List of fake user accounts fetched from GraphQL backend:
-</p>
+  <mat-sidenav #sidenav mode="push">
+    <div class="branding"><span>Thermoboard</span></div>
+    <mat-nav-list>
+      <a mat-list-item *ngFor="let item of navigationSideMenu" (click)="sidenav.close()"
+         [routerLink]="[item.link]" routerLinkActive="active">
+        {{item.label}}
+      </a>
+    </mat-nav-list>
+  </mat-sidenav>
 
-<ul>
-  <li *ngFor="let user of users">{{user.email}}</li>
-</ul>
+  <div class="wrapper">
+
+    <mat-toolbar color="primary">
+      <button mat-icon-button class="hidden-md-up" (click)="sidenav.open()">
+        <mat-icon>menu</mat-icon>
+      </button>
+
+      <span routerLink="" class="branding spacer hidden-sm-down">Thermoboard</span>
+
+      <span class="hidden-sm-down">
+        <button mat-button
+                class="nav-button"
+                *ngFor="let item of navigation"
+                [routerLink]="[item.link]"
+                routerLinkActive="active">
+          {{item.label}}
+        </button>
+      </span>
+
+      <button *ngIf="isAuthenticated"
+              mat-icon-button
+              [matMenuTriggerFor]="toolbarUserMenu">
+        <mat-icon>person</mat-icon>
+      </button>
+
+      <mat-menu #toolbarUserMenu="matMenu">
+        <button mat-menu-item (click)="onLogoutClick()">
+          <mat-icon>power_settings_new</mat-icon>
+          <span>Logout</span>
+        </button>
+      </mat-menu>
+    </mat-toolbar>
+
+    <div class="content"
+         [@routerTransition]="o.isActivated && o.activatedRoute.routeConfig.path">
+      <router-outlet #o="outlet"></router-outlet>
+    </div>
+
+    <div class="footer">
+      <div class="row">
+        <div class="col-12 signature">
+          &#169; {{year}} - Sebastian Häni
+          <span>
+            {{version}}
+          </span>
+        </div>
+      </div>
+    </div>
+
+  </div>
+
+</mat-sidenav-container>
