--- a/src/app/static/dashboard/dashboard.component.html
+++ b/src/app/static/dashboard/dashboard.component.html
@@ -1,7 +1,7 @@
-<p>
-  dashboard works!
-</p>
-
-<ul>
-  <li *ngFor="let user of users">{{user.email}}</li>
-</ul>
+<div class="container">
+  <div class="row">
+    <div class="col-md-12">
+      <h1 class="main-heading">Dashboard</h1>
+    </div>
+  </div>
+</div>
