--- a/src/app/static/records/records.component.html
+++ b/src/app/static/records/records.component.html
@@ -1,3 +1,30 @@
-<p>
-  records works!
-</p>
+<div class="container">
+  <div class="row">
+    <div class="col-md-12">
+      <h1 class="main-heading">Records</h1>
+    </div>
+  </div>
+
+  <mat-table #table [dataSource]="dataSource">
+
+    <ng-container matColumnDef="timestamp">
+      <mat-header-cell *matHeaderCellDef>Timestamp</mat-header-cell>
+      <mat-cell *matCellDef="let element">{{element.timestamp}}</mat-cell>
+    </ng-container>
+
+    <ng-container matColumnDef="place">
+      <mat-header-cell *matHeaderCellDef>Place</mat-header-cell>
+      <mat-cell *matCellDef="let element">{{element.place.name}}</mat-cell>
+    </ng-container>
+
+    <ng-container matColumnDef="kinds">
+      <mat-header-cell *matHeaderCellDef>Kinds</mat-header-cell>
+      <mat-cell *matCellDef="let element">
+        {{getKindList(element)}}
+      </mat-cell>
+    </ng-container>
+
+    <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+    <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+  </mat-table>
+</div>
