--- a/src/app/static/entity-kinds/entity-kinds.component.html
+++ b/src/app/static/entity-kinds/entity-kinds.component.html
@@ -14,7 +14,11 @@
           {{entityKind.manufacturer}}
         </mat-card-subtitle>
         <mat-card-actions>
-          <button mat-button>View</button>
+          <a mat-button
+             routerLink="../entities"
+             [queryParams]="{entityKindId: entityKind.id}">
+            View
+          </a>
         </mat-card-actions>
       </mat-card>
     </div>
