--- a/src/app/static/entities/entities.component.html
+++ b/src/app/static/entities/entities.component.html
@@ -21,6 +21,13 @@
       <mat-cell *matCellDef="let element">{{element.exists_since}}</mat-cell>
     </ng-container>
 
+    <ng-container matColumnDef="actions">
+      <mat-header-cell *matHeaderCellDef></mat-header-cell>
+      <mat-cell *matCellDef="let element">
+        <a mat-button [routerLink]="['../entity', element.id]" class="float-right">View</a>
+      </mat-cell>
+    </ng-container>
+
     <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
     <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
   </mat-table>
