--- a/src/app/static/entity/entity.component.html
+++ b/src/app/static/entity/entity.component.html
@@ -4,24 +4,57 @@
       <h1 class="main-heading">Entity {{id}}</h1>
     </div>
   </div>
+
   <div class="row">
-    <div class="col-md-2"><strong>Category</strong></div>
-    <div class="col-md-10">{{entity && entity.category}}</div>
-  </div>
-  <div class="row">
-    <div class="col-md-2"><strong>Serial Number</strong></div>
-    <div class="col-md-10">{{entity && entity.serial_number}}</div>
-  </div>
-  <div class="row">
-    <div class="col-md-2"><strong>Exists since</strong></div>
-    <div class="col-md-10">{{entity && entity.exists_since}}</div>
-  </div>
-  <div class="row">
-    <div class="col-md-2"><strong>Kind</strong></div>
-    <div class="col-md-10">{{entity && entity.kind && entity.kind.name + ' (' + entity.kind.manufacturer + ')'}}</div>
+    <div class="col-12" [ngClass]="animateOnRouteEnter">
+      <mat-card>
+        <mat-card-header>
+          <mat-card-title>Details</mat-card-title>
+        </mat-card-header>
+        <mat-card-content>
+          <mat-card class="mat-elevation-z0">
+            <mat-card-content>
+              <div class="row">
+                <div class="col-md-2"><strong>Category</strong></div>
+                <div class="col-md-10">{{entity && entity.category}}</div>
+              </div>
+              <div class="row">
+                <div class="col-md-2"><strong>Serial Number</strong></div>
+                <div class="col-md-10">{{entity && entity.serial_number}}</div>
+              </div>
+              <div class="row">
+                <div class="col-md-2"><strong>Exists since</strong></div>
+                <div class="col-md-10">{{entity && entity.exists_since}}</div>
+              </div>
+              <div class="row">
+                <div class="col-md-2"><strong>Kind</strong></div>
+                <div class="col-md-10">
+                  {{entity && entity.kind && entity.kind.name + ' (' + entity.kind.manufacturer + ')'}}
+                </div>
+              </div>
+            </mat-card-content>
+          </mat-card>
+        </mat-card-content>
+      </mat-card>
+    </div>
   </div>
 
-  <p>
-    TODO list of entity records (same component as in Records)
-  </p>
+  <div class="row">
+    <div class="col-12" [ngClass]="animateOnRouteEnter">
+      <mat-card>
+        <mat-card-header>
+          <mat-card-title>Entity Records</mat-card-title>
+        </mat-card-header>
+        <mat-card-content>
+          <mat-card class="mat-elevation-z0">
+            <mat-card-content>
+              <p>
+                TODO list of entity records (same component as in Records)
+              </p>
+            </mat-card-content>
+          </mat-card>
+        </mat-card-content>
+      </mat-card>
+    </div>
+  </div>
 </div>
