--- a/src/app/static/record/record.component.html
+++ b/src/app/static/record/record.component.html
@@ -6,29 +6,63 @@
   </div>
 
   <div class="row">
-    <div class="col-md-2"><strong>Timestamp</strong></div>
-    <div class="col-md-10">{{record && record.timestamp}}</div>
-  </div>
-  <div class="row" *ngIf="record && record.place">
-    <div class="col-md-2"><strong>Place</strong></div>
-    <div class="col-md-10">
-      <a [href]="'https://www.google.com/maps/?q=' + record.place.latitude + ',' + record.place.longitude"
-         target="_blank"
-         rel="noopener">
-        {{record.place.name}}
-      </a>
+    <div class="col-12" [ngClass]="animateOnRouteEnter">
+      <mat-card>
+        <mat-card-header>
+          <mat-card-title>Details</mat-card-title>
+        </mat-card-header>
+        <mat-card-content>
+          <mat-card class="mat-elevation-z0">
+            <mat-card-content>
+              <div class="row">
+                <div class="col-md-2"><strong>Timestamp</strong></div>
+                <div class="col-md-10">{{record && record.timestamp}}</div>
+              </div>
+              <div class="row" *ngIf="record && record.place">
+                <div class="col-md-2"><strong>Place</strong></div>
+                <div class="col-md-10">
+                  <a [href]="'https://www.google.com/maps/?q=' + record.place.latitude + ',' + record.place.longitude"
+                     target="_blank"
+                     rel="noopener">
+                    {{record.place.name}}
+                  </a>
+                </div>
+              </div>
+            </mat-card-content>
+          </mat-card>
+        </mat-card-content>
+      </mat-card>
     </div>
   </div>
-
-  <h2>Values</h2>
 
   <div class="row">
-    <div class="col-12">
-      <thermo-values [values]="record && record.values"></thermo-values>
+    <div class="col-12" [ngClass]="animateOnRouteEnter">
+      <mat-card>
+        <mat-card-header>
+          <mat-card-title>Values</mat-card-title>
+        </mat-card-header>
+        <mat-card-content>
+          <thermo-values [values]="record && record.values"></thermo-values>
+        </mat-card-content>
+      </mat-card>
     </div>
   </div>
 
-  <h2>Entity Records</h2>
+  <div class="row">
+    <div class="col-12" [ngClass]="animateOnRouteEnter">
+      <mat-card>
+        <mat-card-header>
+          <mat-card-title>Entity Records</mat-card-title>
+        </mat-card-header>
 
-  TODO show table of entity records
+        <mat-card-content>
+          <mat-card class="mat-elevation-z0">
+            <mat-card-content>
+              <p>TODO show table of entity records</p>
+            </mat-card-content>
+          </mat-card>
+        </mat-card-content>
+      </mat-card>
+    </div>
+  </div>
 </div>
