add entity record page

--- a/src/app/static/dashboard/dashboard.component.html
+++ b/src/app/static/dashboard/dashboard.component.html
@@ -4,4 +4,83 @@
       <h1 class="main-heading">Dashboard</h1>
     </div>
   </div>
+
+  <div class="row">
+    <div class="col-12" [ngClass]="animateOnRouteEnter">
+      <mat-card>
+        <mat-card-header>
+          <mat-card-title>Records</mat-card-title>
+        </mat-card-header>
+        <mat-card-content>
+          <mat-card class="mat-elevation-z0">
+            <mat-card-content>
+              <p>TODO Histogram</p>
+            </mat-card-content>
+          </mat-card>
+        </mat-card-content>
+      </mat-card>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-md-6" [ngClass]="animateOnRouteEnter">
+      <mat-card>
+        <mat-card-header>
+          <mat-card-title>Last viewed</mat-card-title>
+        </mat-card-header>
+        <mat-card-content>
+          <mat-card class="mat-elevation-z0">
+            <mat-card-content>
+              <p>TODO list last 5 viewed entities / records / entity kinds / entity records</p>
+            </mat-card-content>
+          </mat-card>
+        </mat-card-content>
+      </mat-card>
+    </div>
+    <div class="col-md-6" [ngClass]="animateOnRouteEnter">
+      <mat-card>
+        <mat-card-header>
+          <mat-card-title>Types of vehicles</mat-card-title>
+        </mat-card-header>
+        <mat-card-content>
+          <mat-card class="mat-elevation-z0">
+            <mat-card-content>
+              <p>TODO Pie Chart</p>
+            </mat-card-content>
+          </mat-card>
+        </mat-card-content>
+      </mat-card>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-md-6" [ngClass]="animateOnRouteEnter">
+      <mat-card>
+        <mat-card-header>
+          <mat-card-title>Favorites</mat-card-title>
+        </mat-card-header>
+        <mat-card-content>
+          <mat-card class="mat-elevation-z0">
+            <mat-card-content>
+              <p>TODO list favorites</p>
+            </mat-card-content>
+          </mat-card>
+        </mat-card-content>
+      </mat-card>
+    </div>
+    <div class="col-md-6" [ngClass]="animateOnRouteEnter">
+      <mat-card>
+        <mat-card-header>
+          <mat-card-title>Recent activity</mat-card-title>
+        </mat-card-header>
+        <mat-card-content>
+          <mat-card class="mat-elevation-z0">
+            <mat-card-content>
+              <p>TODO list recent activity</p>
+            </mat-card-content>
+          </mat-card>
+        </mat-card-content>
+      </mat-card>
+    </div>
+  </div>
 </div>
