--- a/src/app/static/entity/entity.component.html
+++ b/src/app/static/entity/entity.component.html
@@ -48,9 +48,32 @@
         <mat-card-content>
           <mat-card class="mat-elevation-z0">
             <mat-card-content>
-              <p>
-                TODO list of entity records (same component as in Records)
-              </p>
+              <mat-table #table [dataSource]="recordsDataSource">
+                <ng-container matColumnDef="timestamp">
+                  <mat-header-cell *matHeaderCellDef>Timestamp</mat-header-cell>
+                  <mat-cell *matCellDef="let element">{{element.record.timestamp}}</mat-cell>
+                </ng-container>
+
+                <ng-container matColumnDef="name">
+                  <mat-header-cell *matHeaderCellDef>Name</mat-header-cell>
+                  <mat-cell *matCellDef="let element">{{element.name}}</mat-cell>
+                </ng-container>
+
+                <ng-container matColumnDef="place">
+                  <mat-header-cell *matHeaderCellDef>Place</mat-header-cell>
+                  <mat-cell *matCellDef="let element">{{element.record.place.name}}</mat-cell>
+                </ng-container>
+
+                <ng-container matColumnDef="actions">
+                  <mat-header-cell *matHeaderCellDef></mat-header-cell>
+                  <mat-cell *matCellDef="let element">
+                    <a mat-button [routerLink]="['../../entity-record', element.id]" class="float-right">View</a>
+                  </mat-cell>
+                </ng-container>
+
+                <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+                <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+              </mat-table>
             </mat-card-content>
           </mat-card>
         </mat-card-content>
