add favorite icon

--- a/src/app/static/entity-record/entity-record.component.html
+++ b/src/app/static/entity-record/entity-record.component.html
@@ -1,7 +1,10 @@
 <div class="container">
   <div class="row">
     <div class="col-md-12">
-      <h1 class="main-heading">Entity Record</h1>
+      <h1 class="main-heading">
+        <thermo-add-favorite></thermo-add-favorite>
+        Entity Record
+      </h1>
     </div>
   </div>
 
