--- a/src/app/static/entities/entities.component.html
+++ b/src/app/static/entities/entities.component.html
@@ -5,19 +5,32 @@
     </div>
   </div>
 
-  <mat-table #table [dataSource]="dataSource">
+  <mat-form-field>
+    <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
+  </mat-form-field>
+
+  <mat-table #table [dataSource]="dataSource" matSort>
+    <ng-container matColumnDef="favorite">
+      <mat-header-cell *matHeaderCellDef>Favorite</mat-header-cell>
+      <mat-cell *matCellDef="let element">
+        <thermo-add-favorite [url]="router.createUrlTree(['../entity', element.id]).toString()"
+                             inTable="true">
+        </thermo-add-favorite>
+      </mat-cell>
+    </ng-container>
+
     <ng-container matColumnDef="category">
-      <mat-header-cell *matHeaderCellDef>Category</mat-header-cell>
+      <mat-header-cell *matHeaderCellDef mat-sort-header>Category</mat-header-cell>
       <mat-cell *matCellDef="let element">{{element.category}}</mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="serial_number">
-      <mat-header-cell *matHeaderCellDef>Serial Number</mat-header-cell>
+      <mat-header-cell *matHeaderCellDef mat-sort-header>Serial Number</mat-header-cell>
       <mat-cell *matCellDef="let element">{{element.serial_number}}</mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="exists_since">
-      <mat-header-cell *matHeaderCellDef>Exists since</mat-header-cell>
+      <mat-header-cell *matHeaderCellDef mat-sort-header>Exists since</mat-header-cell>
       <mat-cell *matCellDef="let element">{{element.exists_since}}</mat-cell>
     </ng-container>
 
@@ -31,4 +44,9 @@
     <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
     <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
   </mat-table>
+
+  <mat-paginator #paginator
+                 [pageSize]="10"
+                 [pageSizeOptions]="[5, 10, 20]">
+  </mat-paginator>
 </div>
