--- a/src/app/static/entity/entity.component.html
+++ b/src/app/static/entity/entity.component.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-md-12">
       <h1 class="main-heading">
-        <thermo-add-favorite></thermo-add-favorite>
+        <thermo-add-favorite *ngIf="entity" [name]="entity.serial_number" type="entity"></thermo-add-favorite>
         Entity {{id}}
       </h1>
     </div>
@@ -55,7 +55,9 @@
                 <ng-container matColumnDef="favorite">
                   <mat-header-cell *matHeaderCellDef>Favorite</mat-header-cell>
                   <mat-cell *matCellDef="let element">
-                    <thermo-add-favorite [url]="router.createUrlTree(['../../entity-record', element.id]).toString()"
+                    <thermo-add-favorite [name]="element.name"
+                                         type="entity-record"
+                                         [url]="router.createUrlTree(['../../entity-record', element.id]).toString()"
                                          inTable="true">
                     </thermo-add-favorite>
                   </mat-cell>
