--- a/src/app/static/entity-record/entity-record.component.html
+++ b/src/app/static/entity-record/entity-record.component.html
@@ -2,7 +2,10 @@
   <div class="row">
     <div class="col-md-12">
       <h1 class="main-heading">
-        <thermo-add-favorite></thermo-add-favorite>
+        <thermo-add-favorite *ngIf="entityRecord"
+                             [name]="entityRecord.name"
+                             type="entity-record">
+        </thermo-add-favorite>
         Entity Record
       </h1>
     </div>
