--- a/src/app/static/entities/entities.component.html
+++ b/src/app/static/entities/entities.component.html
@@ -26,6 +26,11 @@
       <mat-cell *matCellDef="let element">{{element.category}}</mat-cell>
     </ng-container>
 
+    <ng-container matColumnDef="kind">
+      <mat-header-cell *matHeaderCellDef mat-sort-header>Kind</mat-header-cell>
+      <mat-cell *matCellDef="let element">{{element.kind.name}}</mat-cell>
+    </ng-container>
+
     <ng-container matColumnDef="serial_number">
       <mat-header-cell *matHeaderCellDef mat-sort-header>Serial Number</mat-header-cell>
       <mat-cell *matCellDef="let element">{{element.serial_number}}</mat-cell>
