--- a/src/app/static/entity-record/entity-record.component.html
+++ b/src/app/static/entity-record/entity-record.component.html
@@ -2,8 +2,7 @@
   <div class="row">
     <div class="col-md-12">
       <h1 class="main-heading">
-        <thermo-add-favorite *ngIf="entityRecord"
-                             [name]="entityRecord.name"
+        <thermo-add-favorite [name]="entityRecord && entityRecord.name"
                              type="entity-record">
         </thermo-add-favorite>
         Entity Record
