implement charts on dashboard

--- a/src/app/static/dashboard/dashboard.component.html
+++ b/src/app/static/dashboard/dashboard.component.html
@@ -9,14 +9,10 @@
     <div class="col-12" [ngClass]="animateOnRouteEnter">
       <mat-card>
         <mat-card-header>
-          <mat-card-title>Records</mat-card-title>
+          <mat-card-title>Aufnahmen</mat-card-title>
         </mat-card-header>
         <mat-card-content>
-          <mat-card class="mat-elevation-z0">
-            <mat-card-content>
-              <p>TODO Histogram</p>
-            </mat-card-content>
-          </mat-card>
+          <thermo-chart-record-histogram></thermo-chart-record-histogram>
         </mat-card-content>
       </mat-card>
     </div>
@@ -26,28 +22,45 @@
     <div class="col-md-6" [ngClass]="animateOnRouteEnter">
       <mat-card>
         <mat-card-header>
-          <mat-card-title>Last viewed</mat-card-title>
+          <mat-card-title>Zuletzt angesehen</mat-card-title>
         </mat-card-header>
         <mat-card-content>
-          <mat-card class="mat-elevation-z0">
-            <mat-card-content>
-              <p>TODO list last 5 viewed entities / records / entity kinds / entity records</p>
-            </mat-card-content>
-          </mat-card>
+          <mat-list>
+            <mat-list-item>
+              <h4 mat-line>Fahrzeugtyp DTZ</h4>
+              <p mat-line>vor 4 Minuten</p>
+            </mat-list-item>
+            <mat-list-item>
+              <h4 mat-line>Fahrzeug 45-654-08</h4>
+              <p mat-line>vor 5 Minuten</p>
+            </mat-list-item>
+            <mat-list-item>
+              <h4 mat-line>Aufnahme 11.12.2017 08:55</h4>
+              <p mat-line>vor 10 Minuten</p>
+            </mat-list-item>
+            <mat-list-item>
+              <h4 mat-line>Aufnahme 11.12.2017 09:26</h4>
+              <p mat-line>vor 31 Minuten</p>
+            </mat-list-item>
+            <mat-list-item>
+              <h4 mat-line>Fahrzeugtyp DPZ</h4>
+              <p mat-line>vor 1 Stunde</p>
+            </mat-list-item>
+            <mat-list-item>
+              <h4 mat-line>Aufnahme 11.01.2018 01:43</h4>
+              <p mat-line>vor 1 Stunde</p>
+            </mat-list-item>
+          </mat-list>
         </mat-card-content>
       </mat-card>
     </div>
     <div class="col-md-6" [ngClass]="animateOnRouteEnter">
       <mat-card>
         <mat-card-header>
-          <mat-card-title>Types of vehicles</mat-card-title>
+          <mat-card-title>Fahrzeugtypen</mat-card-title>
         </mat-card-header>
         <mat-card-content>
-          <mat-card class="mat-elevation-z0">
-            <mat-card-content>
-              <p>TODO Pie Chart</p>
-            </mat-card-content>
-          </mat-card>
+          <thermo-chart-entity-kind></thermo-chart-entity-kind>
         </mat-card-content>
       </mat-card>
     </div>
@@ -57,15 +70,19 @@
     <div class="col-md-6" [ngClass]="animateOnRouteEnter">
       <mat-card>
         <mat-card-header>
-          <mat-card-title>Favorites</mat-card-title>
+          <mat-card-title>Favoriten</mat-card-title>
         </mat-card-header>
         <mat-card-content>
           <p *ngIf="favorites.length === 0">
             No favorites added yet
           </p>
-          <mat-nav-list dense>
+          <mat-nav-list>
             <a mat-list-item [routerLink]="favorite.url" *ngFor="let favorite of favorites">
-              {{favorite.type}}: {{favorite.name}}
+              <span [ngSwitch]="favorite.type">
+                <span *ngSwitchCase="'record'">Aufnahme {{favorite.name | date:'dd.MM.yyyy hh:mm'}}</span>
+                <span *ngSwitchCase="'entity'">Fahrzeug {{favorite.name}}</span>
+                <span *ngSwitchCase="'entity-record'">Fahrzeugaufnahme {{favorite.name}}</span>
+              </span>
             </a>
           </mat-nav-list>
         </mat-card-content>
@@ -74,14 +91,21 @@
     <div class="col-md-6" [ngClass]="animateOnRouteEnter">
       <mat-card>
         <mat-card-header>
-          <mat-card-title>Recent activity</mat-card-title>
+          <mat-card-title>Neuste Aktivitäten</mat-card-title>
         </mat-card-header>
         <mat-card-content>
-          <mat-card class="mat-elevation-z0">
-            <mat-card-content>
-              <p>TODO list recent activity</p>
-            </mat-card-content>
-          </mat-card>
+          <mat-nav-list>
+            <mat-list-item>
+              <p matLine>
+                Kommentar zu Fahrzeug 45-654-08: "Hatte Wassereinbruch am 10.10.2017" von Sebastian Häni
+              </p>
+            </mat-list-item>
+            <mat-list-item>
+              <p matLine>
+                Kommentar zu Aufnahme 11.12.2017 08:55: "Wurde inspiziert. Oben links kein Schaden." von Sebastian Häni
+              </p>
+            </mat-list-item>
+          </mat-nav-list>
         </mat-card-content>
       </mat-card>
     </div>
