--- a/src/app/shared/value-image-dialog/value-image-dialog.component.html
+++ b/src/app/shared/value-image-dialog/value-image-dialog.component.html
@@ -1,3 +1,3 @@
 <div (mousewheel)="onMousewheel($event)" (mousedown)="onMouseDown()">
-  <canvas #myCanvas width="100%" height="100%"></canvas>
+  <canvas #myCanvas width="100%" height="100%" (mousemove)="onMouseMove($event)"></canvas>
 </div>
