--- a/src/app/static/entity-kinds/entity-kinds.component.html
+++ b/src/app/static/entity-kinds/entity-kinds.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-md-12">
-      <h1 class="main-heading">Entity Kinds</h1>
+      <h1 class="main-heading">Fahrzeugtypen</h1>
     </div>
   </div>
   <div class="row align-items-end">
@@ -17,7 +17,7 @@
           <a mat-button
              routerLink="../entities"
              [queryParams]="{entityKindId: entityKind.id}">
-            View
+            Ansehen
           </a>
         </mat-card-actions>
       </mat-card>
