--- a/src/app/static/records/records.component.html
+++ b/src/app/static/records/records.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-md-12">
-      <h1 class="main-heading">Records</h1>
+      <h1 class="main-heading">Aufnahmen</h1>
     </div>
   </div>
 
@@ -11,7 +11,7 @@
 
   <mat-table #table [dataSource]="dataSource" matSort>
     <ng-container matColumnDef="favorite">
-      <mat-header-cell *matHeaderCellDef>Favorite</mat-header-cell>
+      <mat-header-cell *matHeaderCellDef>Favorit</mat-header-cell>
       <mat-cell *matCellDef="let element">
         <thermo-add-favorite [url]="router.createUrlTree(['../record', element.id]).toString()"
                              inTable="true">
@@ -20,17 +20,17 @@
     </ng-container>
 
     <ng-container matColumnDef="timestamp">
-      <mat-header-cell *matHeaderCellDef mat-sort-header>Timestamp</mat-header-cell>
-      <mat-cell *matCellDef="let element">{{element.timestamp}}</mat-cell>
+      <mat-header-cell *matHeaderCellDef mat-sort-header>Zeitstempel</mat-header-cell>
+      <mat-cell *matCellDef="let element">{{element.timestamp | date:'dd.MM.yyyy hh:mm'}}</mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="place">
-      <mat-header-cell *matHeaderCellDef mat-sort-header>Place</mat-header-cell>
+      <mat-header-cell *matHeaderCellDef mat-sort-header>Ort</mat-header-cell>
       <mat-cell *matCellDef="let element">{{element.place.name}}</mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="kinds">
-      <mat-header-cell *matHeaderCellDef>Kinds</mat-header-cell>
+      <mat-header-cell *matHeaderCellDef>Typen</mat-header-cell>
       <mat-cell *matCellDef="let element">
         {{element.kinds}}
       </mat-cell>
@@ -39,7 +39,7 @@
     <ng-container matColumnDef="actions">
       <mat-header-cell *matHeaderCellDef></mat-header-cell>
       <mat-cell *matCellDef="let element">
-        <a mat-button [routerLink]="['../record', element.id]" class="float-right">View</a>
+        <a mat-button [routerLink]="['../record', element.id]" class="float-right">Ansehen</a>
       </mat-cell>
     </ng-container>
 
